docs: comprehensive revision of README, DESIGN.md, and GitHub Pages site
Cross-checked every claim against the HUPO-PSI mzPeak spec (doc/index.md + schema/)
and the published paper (doi:10.1021/acs.jproteome.5c00435). Key changes:

README.md:
- Added 'About the mzPeak format' section: paper DOI, authors, PSI status, official
  C#/.NET (HUPO-PSI/mzPeak.NET) and TypeScript (HUPO-PSI/mzpeakts) implementations,
  mzPeakJ described as unofficial demonstrator ahead of planned official Java impl.
- Corrected: 'mzpeaks' (domain-type library) distinguished from 'mzpeak_prototyping'
  (the actual format impl); no longer conflated in the disclaimer.
- Removed the duplicate 'MS-Numpress PIC not decoded' line.
- Added Numpress PIC write API to Writing section.
- Added activation summary, peaks(), fileMetadata(), findPeak() to Usage example.
- Table: noted small.chunked has secondary centroid peaks for all spectra.
- Table: noted entity_type 'wavelength spectrum' is two words with a space (exact string).
- Scope: noted spectra_peaks.parquet is optional; noted chromatogram chunk write as deferred.
- 123 tests cross-validated against Rust + Python suites.

DESIGN.md:
- §1: added TAR rejection rationale; expanded manifest table with exact entity_type strings.
- §2: added column-level field tables for spectrum/scan/precursor/selected_ion groups.
- §3: documented chunk encoding CV terms (MS:1003088/1003089 are mzPeak-specific, not OBO);
  clarified SLOF fixedPoint selection algorithm; added Numpress PIC status.
- §4: clarified mz_delta_model is a degree-2 polynomial (beta0+beta1*mz+beta2*mz^2).
- §7: added complete footer KV metadata table with field names from schema JSON files.
- §8: architecture updated (no DeconvolutedPeak, added model.meta, FileSliceInputFile,
  ms.numpress, correct store names).
- §9: test count updated (123), reference alignment sections added.

docs/index.md (GitHub Pages):
- Full rewrite: mzPeak background, paper DOI, other official implementations, all
  sig